--- a/test/jquery.formyeah.html
+++ b/test/jquery.formyeah.html
@@ -8,16 +8,9 @@
 
   <script src="../libs/jquery/jquery.js"></script>
   <script src="../src/jquery.formyeah.js"></script>
-
-  <script type="text/javascript">
-    $(function () {
-      //$('#form-one').sisyphus();
-      $('#form1').formyeah();
-    })
-  </script>
 </head>
 <body style="max-width: 30em; margin: 2em auto;">
-  <form name="mydata" id="form1" method="get" action="?">
+  <form name="mydata" class="formyeah" data-page-identifier="123" method="get" action="?">
     <div class="form-group">
       <label for="name" class="control-label">Input Text:</label>
       <input name="name" value="" id="name" class="form-control"/>
