--- a/test/jquery.formyeah.html
+++ b/test/jquery.formyeah.html
@@ -10,7 +10,7 @@
   <script src="../src/jquery.formyeah.js"></script>
 </head>
 <body style="max-width: 30em; margin: 2em auto;">
-  <form name="mydata" class="formyeah" data-page-identifier="123" method="get" action="?">
+  <form name="mydata" class="formyeah" data-page-identifier="" method="get" action="?">
     <div class="form-group">
       <label for="name" class="control-label">Input Text:</label>
       <input name="name" value="" id="name" class="form-control"/>
