Test localstarga in chromeless webkit webapp

--- a/test/jquery.formyeah.html
+++ b/test/jquery.formyeah.html
@@ -8,6 +8,10 @@
 
   <script src="../libs/jquery/jquery.js"></script>
   <script src="../src/jquery.formyeah.js"></script>
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; minimum-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 </head>
 <body style="max-width: 30em; margin: 2em auto;">
   <form name="mydata" class="formyeah" data-page-identifier="" method="get" action="?">
